<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/loginpageimage"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:src="@drawable/ic_launcher" >
    </ImageView>

    <EditText
        android:id="@+id/loginpageusername"
        android:layout_width="200sp"
        android:layout_height="35sp"
        android:layout_below="@+id/loginpageimage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/username"
        android:textSize="15sp" >
    </EditText>

    <EditText
        android:id="@+id/loginpagepassword"
        android:layout_width="200sp"
        android:layout_height="35sp"
        android:layout_below="@+id/loginpageusername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/password"
       
        android:textSize="15sp" >
    </EditText>

    <Button
        android:id="@+id/loginpageloginbutton"
        android:layout_width="195sp"
        android:layout_height="35sp"
        android:layout_below="@+id/loginpagepassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:onClick="login"
        android:text="@string/login"
        android:textSize="15sp"
        android:textStyle="bold" >
    </Button>

    <Button
        android:id="@+id/loginpagesignupbutton"
        android:layout_width="195sp"
        android:layout_height="35sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:onClick="signup"
        android:text="@string/signup"
        android:textSize="15sp"
        android:textStyle="bold" >
    </Button>

    <TextView
        android:id="@+id/haventsignedupyet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginpagesignupbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5sp"
        android:text="@string/haventsignedup"
        android:textSize="13sp" >
    </TextView>

</RelativeLayout>